@@ -20,7 +20,7 @@ $EM_CONF[$_EXTKEY] = Array (
 	'loadOrder' => '',
 	'TYPO3_version' => '-',
 	'PHP_version' => '-',
-	'module' => 'mod1',
+	'module' => 'mod1,mod2',
 	'state' => 'alpha',
 	'internal' => 0,
 	'uploadfolder' => 1,
