@@ -1,0 +1,13 @@
+<?php
+
+// DO NOT REMOVE OR CHANGE THESE 3 LINES:
+define('TYPO3_MOD_PATH', '../typo3conf/ext/seminars/mod2/');
+$BACK_PATH='../../../../typo3/';
+$MCONF['name']='web_txseminarsM2';
+
+$MCONF['access'] = 'user,group';
+$MCONF['script'] = 'index.php';
+
+$MLANG['default']['tabs_images']['tab'] = 'moduleicon.gif';
+$MLANG['default']['ll_ref'] = 'LLL:EXT:seminars/mod2/locallang_mod.php';
+?>
